--- a/css/styles.css
+++ b/css/styles.css
@@ -524,3 +524,18 @@ img {
 .icon-sec-footer{
     fill: #f4f4fd;
 }
+
+a:focus {
+    background-color: #404bbf;
+}
+
+a:active {
+    background-color: #404bbf;
+}
+
+.portfolio-li:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
