--- a/css/styles.css
+++ b/css/styles.css
@@ -526,11 +526,11 @@ img {
 }
 
 a:focus {
-    background-color: #404bbf;
+    background-color: #31d0aa;
 }
 
 a:active {
-    background-color: #404bbf;
+    background-color: #31d0aa;
 }
 
 .portfolio-li:hover {
