--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ img {
     background: #2e2f42;
     padding: 188px 0;
     background-image:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
-    url(../images/people-office.jpg);
+    url(../images/icons.svg/people-office.svg);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
@@ -266,6 +266,11 @@ img {
 .our-team{
     background: #f4f4fd;
     padding: 120px 0;
+}
+
+.our-team .link:focus, 
+.our-team .link:active {
+    background-color: #404bbf;
 }
 
 .team-row{
